fix(terminology): inline $expand surfaces supplement designations/displays (#253)
Inline $expand (a valueSet supplied as a parameter, referencing only a base code
system) failed to apply supplements: displayLanguage auto-discovery kept the base
display, and useSupplement added no designation. Two causes:

1. A content=supplement code system creates NO concept rows of its own. Its
   designations live on code-system-entity versions whose ENTITY is the base, made
   members of the supplement's code system version via base_entity_version_id.
   loadSupplementConcepts queried ConceptRepository by entity code_system (the
   supplement), which never matched, so nothing loaded. It now loads by
   code-system-version membership (supplement|version) and reads those versions'
   designations.
2. The supplement concept query is permission-filtered with "code_system in (list)",
   and a null list (an unrestricted session) matches NOTHING. supplementParams now
   passes the session's CS_READ grants, and the membership load scopes an unrestricted
   session to the base + supplement code systems explicitly.

Adds ValueSetSupplementExpandIT coverage for both inline scenarios and updates the
ConceptSupplementService unit test for the membership-based load.

Co-authored-by: Igor Bossenko <igor-on-mini@ib-mac-mini.local>